# fastapi-containers

./: readme.md
1-docker-simple-fastapi/: Dockerfile  readme.md  req.txt
2-docker_with_poetry/: pyproject.toml
3-docker_poetry_gunicorn/: .dockerignore   Dockerfile  Dockerfile.unicorn  compose.yml  gunicorn_conf.py  readme.md
4-kafka/: Readme  compose.yml  pyproject.toml  readme.md
5_aiokafka/: pyproject.toml
5_aiokafka/app/: main.py  producer.py  schemas.py  settings.py
6-redis_base/: compose.yaml  main copy.py  main.py  pyproject.toml  readme.md
7-redis_with_fastapi/: main.py  pyproject.toml  readme.md
9-celery/: README.md  docker-compose.yml
9-celery/project/: main.py
9-celery/project/tests/: test_tasks.py
MSA-main/services/web/: Dockerfile  pyproject.toml
MSA-main/services/web/app/: main.py  producer.py
MSA-main/services/web/tests/: conftest.py  test_send_method.py
docker_build/: Dockerfile  Dockerfile copy  Dockerfile.dev  Dockerfile.min_working!
etc/: Dockerfile copy  Dockerfile copy 2  Dockerfile.requirements  pyproject.toml
