[project]
name = "7-redis-with-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ne_srv",email = "ne_srv@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aioredis (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
redis-server = {version = "^6.0.9", python = ">=3.12,<4"}
