[tool.poetry]
name = "test-deploy-fastapi-gunicorn-poetry"
version = "0.1.0"
description = ""
authors = ["ne_srv <ne_srv@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
