[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["youngwishes <d.fedorov@ylab.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
aiokafka = "^0.10.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
responses = "^0.25.0"
aiohttp = "^3.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
